--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+body {
+    height: 100vh;
+    background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%)) no-repeat;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.container {
+    background-color: white;
+    border-radius: 25px;
+    padding: 10px;
+}
+
+.headline {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-weight: 700;
+    text-align: center;
+}
+
 .attribution {
     font-size: 11px;
     text-align: center;
@@ -6,20 +28,46 @@
     color: hsl(228, 45%, 44%);
 }
 
+.faq {
+    border-bottom: 1px solid gray;
+    margin: 10px;
+    padding: 10px 0 10px 0;
+}
+
+.faq:last-child {
+    border: none;
+}
+
 .question {
+    padding: 0;
     background: transparent;
     border: none;
     cursor: pointer;
     width: 100%;
     text-align: left;
     outline: none;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 15px;
 }
 
 .active, .question:hover {
     color: hsl(14, 88%, 65%);
 }
 
+.arrow {
+    float: right;
+    transition: all .2s ease-out;
+}
+
+.active > .arrow {
+    transform: rotate(180deg);
+    transition: all .2s ease-out;
+}
+
 .answer {
-    display: none;
     overflow: hidden;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 15px;
 }
